less andy more czuby

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,11 +2,13 @@
   <div class="header-container">
     <nav class="nav">
       <div id="home-container">
-        <a class="home nav-link" href="/">Home</a>
+        <a class="home nav-link" href="/">index</a>
       </div>
       <ul>
-        <li><a class="nav-link" href="/publications.html">Publications</a></li>
+        <li><a class="nav-link" href="/blog.html">blog</a></li>
+<!--
         <li><a class="nav-link" href="/static/cv.pdf">CV</a></li>
+-->
       </ul>
     </nav>
   </div>
