--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,6 @@
 <footer>
-  Crafted by hand using
+ this site forked from one crafted by hand by my fine friend
+  <a href="https://goderich.tw/">Andre Goderich</a> using
   <a href="https://babashka.org/">Babashka</a>,
   <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
   and <a href="https://pandoc.org/index.html">Pandoc</a>
