--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,13 @@
-<footer>
- this site forked from one crafted by hand by my fine friend
-  <a href="https://goderich.tw/">Andre Goderich</a> using
-  <a href="https://babashka.org/">Babashka</a>,
-  <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
-  and <a href="https://pandoc.org/index.html">Pandoc</a>
-  •
-  <a href="https://github.com/goderich/website">Source code</a>
+<footer style="text-align: center; line-height: 1.6; margin-top: 4em;">
+  <div>
+    this site forked from one crafted by hand by my fine friend
+    <a href="https://goderich.tw/">Andre Goderich</a> using
+    <a href="https://babashka.org/">Babashka</a>,
+    <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
+    and <a href="https://pandoc.org/index.html">Pandoc</a>
+  </div>
+  <div style="margin-top: 0.5em;">
+    •
+    <a href="https://github.com/goderich/website">Source code</a>
+  </div>
 </footer>
