adjust footer again

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer style="text-align: center; line-height: 1.6; margin-top: 4em;">
   <div>
-    this site forked from one crafted by hand by my fine friend
+    this site forked from one crafted by hand by my fine friend<br>
     <a href="https://goderich.tw/">Andre Goderich</a> using
     <a href="https://babashka.org/">Babashka</a>,
     <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
