--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,13 +1,15 @@
-<footer style="text-align: center; line-height: 1.6; margin-top: 4em;">
+<footer style="display: flex; flex-direction: column; align-items: center; text-align: center; line-height: 1.6; margin-top: 4em;">
   <div>
-    this site forked from one crafted by hand by my fine friend<br>
+    this site forked from one crafted by hand by my fine friend
+  </div>
+  <div>
     <a href="https://goderich.tw/">Andre Goderich</a> using
     <a href="https://babashka.org/">Babashka</a>,
     <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
     and <a href="https://pandoc.org/index.html">Pandoc</a>
   </div>
   <div style="margin-top: 0.5em;">
-    •
+    &bull;
     <a href="https://github.com/goderich/website">Source code</a>
   </div>
 </footer>
