--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
-<footer style="display: flex; flex-direction: column; align-items: center; text-align: center; line-height: 1.6; margin-top: 4em;">
-  <div>
+<footer style="display: flex; flex-direction: column; align-items: center; text-align: center; line-height: 1.6; margin-top: 4em; max-width: 600px; margin-left: auto; margin-right: auto;">
+  <div style="white-space: nowrap;">
     this site forked from one crafted by hand by my fine friend
   </div>
-  <div>
+  <div style="white-space: nowrap;">
     <a href="https://goderich.tw/">Andre Goderich</a> using
     <a href="https://babashka.org/">Babashka</a>,
     <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
