--- a/templates/header.html
+++ b/templates/header.html
@@ -6,9 +6,7 @@
       </div>
       <ul>
         <li><a class="nav-link" href="/blog.html">blog</a></li>
-<!--
-        <li><a class="nav-link" href="/static/cv.pdf">CV</a></li>
--->
+        <li><a class="nav-link" href="/static/czuba-resume-cv.pdf">CV</a></li>
       </ul>
     </nav>
   </div>
