--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,5 @@
-<footer style="display: flex; flex-direction: column; align-items: center; text-align: center; line-height: 1.6; margin-top: 4em; max-width: 600px; margin-left: auto; margin-right: auto;">
+<footer
+  style="display: flex; flex-direction: column; align-items: center; text-align: center; line-height: 1.6; margin-top: 4em; max-width: 600px; margin-left: auto; margin-right: auto;">
   <div style="white-space: nowrap;">
     this site forked from one crafted by hand by my fine friend
   </div>
@@ -7,9 +8,6 @@
     <a href="https://babashka.org/">Babashka</a>,
     <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
     and <a href="https://pandoc.org/index.html">Pandoc</a>
-  </div>
-  <div style="margin-top: 0.5em;">
-    &bull;
     <a href="https://github.com/goderich/website">Source code</a>
   </div>
 </footer>
