--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,6 +8,7 @@
     <a href="https://babashka.org/">Babashka</a>,
     <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
     and <a href="https://pandoc.org/index.html">Pandoc</a>
+    &bull;
     <a href="https://github.com/goderich/website">Source code</a>
   </div>
 </footer>
