--- a/public/css/sakura.css
+++ b/public/css/sakura.css
@@ -1,69 +1,49 @@
 /* Sakura.css v1.5.0 - Modified with Spacemacs-Dark Theme
  * ================
- * Minimal css theme customized with Doom Emacs fonts and colors
+ * Minimal css theme - customized with Doom Emacs fonts and colors inspired by Spacemacs!
  * Project: https://github.com/oxalorg/sakura/
+ * Original implementation: https://github.com/goderich/website
+ * Spacemacs theme implementation by Matthew Czuba: https://github.com/abuczuba/czu.ba
+ * Spacemacs-Dark: https://github.com/syl20bnr/spacemacs/tree/master/themes/spacemacs-dark
  */
 /* Body */
-* {
-    cursor: default;
-}
-
 html {
-    font-size: 62.5%;
-    font-family: "Source Code Pro", monospace;
-    caret-color: #66CD00;
-    /* chartreuse3 */
-    -webkit-text-size-adjust: 100%;
-    /* Prevent iOS font size change */
+  font-size: 62.5%;
+  font-family: "Source Code Pro", monospace;
+  caret-color: #66CD00;
+  /* chartreuse3 from the insert cursor in spacemacs! */
 }
 
 #container {
-    display: grid;
-    min-height: 100vh;
-    min-height: 100svh;
-    grid-template-rows: auto 1fr auto;
-    padding-left: 13px;
-    padding-right: 13px;
-    box-sizing: border-box;
-    width: 100%;
+  display: grid;
+  min-height: 100vh;
+  min-height: 100svh;
+  grid-template-rows: auto 1fr auto;
+  padding-left: 13px;
+  padding-right: 13px;
 }
 
 body {
-    font-size: 1.8rem;
-    line-height: 1.618;
-    max-width: 34em;
-    /* Reduced from 38em to account for monospace font width */
-    margin: auto;
-    color: #b2b2b2;
-    /* spacemacs-dark foreground */
-    background-color: #292b2e;
-    /* spacemacs-dark background */
+  font-size: 1.8rem;
+  line-height: 1.618;
+  max-width: 38em;
+  margin: auto;
+  color: #b2b2b2;
+  /* spacemacs-dark foreground */
+  background-color: #292b2e;
+  /* spacemacs-dark background */
 }
 
 @media (max-width: 684px) {
-    body {
-        font-size: 1.53rem;
-        max-width: 31em;
-        /* Reduced further for mobile */
-    }
-
-    #container {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
+  body {
+    font-size: 1.53rem;
+  }
 }
 
 @media (max-width: 382px) {
-    body {
-        font-size: 1.45rem;
-        max-width: 28em;
-        /* Even smaller for very small screens */
-    }
-
-    #container {
-        padding-left: 5px;
-        padding-right: 5px;
-    }
+  body {
+    font-size: 1.45rem;
+  }
 }
 
 h1,
@@ -72,200 +52,194 @@ h3,
 h4,
 h5,
 h6 {
-    line-height: 1.1;
-    font-family: "Source Code Pro", monospace;
-    font-weight: 700;
-    margin-top: 3rem;
-    margin-bottom: 1.5rem;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    -ms-word-break: break-all;
-    word-break: break-word;
-    color: #c5c8c6;
-    /* Light heading color */
+  line-height: 1.1;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 700;
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  color: #c5c8c6;
+  /* Light heading color */
 }
 
 h1 {
-    font-size: 2.35em;
+  font-size: 2.35em;
 }
 
 h2 {
-    font-size: 2em;
+  font-size: 2em;
 }
 
 h3 {
-    font-size: 1.75em;
+  font-size: 1.75em;
 }
 
 h4 {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 h5 {
-    font-size: 1.25em;
+  font-size: 1.25em;
 }
 
 h6 {
-    font-size: 1em;
+  font-size: 1em;
 }
 
 h3#name {
-    color: #CDAD00;
-    /* LightGoldenrod3 - visual-state-cursor */
+  color: #CDAD00;
+  /* LightGoldenrod3 - visual-state-cursor */
 }
 
 p {
-    margin-top: 0px;
-    margin-bottom: 2.5rem;
+  margin-top: 0px;
+  margin-bottom: 2.5rem;
 }
 
 small,
 sub,
 sup {
-    font-size: 60%;
+  font-size: 60%;
 }
 
 hr {
-    border-color: #5d4d7a;
-    /* spacemacs inactive-gray */
-}
-
-a,
-input,
-textarea,
-button,
-select {
-    cursor: pointer;
+  border-color: #5d4d7a;
+  /* spacemacs inactive-gray */
 }
 
 a {
-    text-decoration: none;
-    color: #7EC0EE;
-    /* SkyBlue2 - emacs-state-cursor */
+  text-decoration: none;
+  color: #7EC0EE;
+  /* SkyBlue2 - emacs-state-cursor */
 }
 
 a:hover {
-    color: #EEAD0E;
-    /* DarkGoldenrod2 - insert-state-cursor */
-    border-bottom: 2px solid #b2b2b2;
+  color: #EEAD0E;
+  /* DarkGoldenrod2 - insert-state-cursor */
+  border-bottom: 2px solid #b2b2b2;
 }
 
 ul {
-    padding-left: 1.4em;
-    margin-top: 0px;
-    margin-bottom: 2.5rem;
+  padding-left: 1.4em;
+  margin-top: 0px;
+  margin-bottom: 2.5rem;
 }
 
 li {
-    margin-bottom: 0.4em;
+  margin-bottom: 0.4em;
 }
 
 blockquote {
-    margin-left: 0px;
-    margin-right: 0px;
-    padding-left: 1em;
-    padding-top: 0.8em;
-    padding-bottom: 0.8em;
-    padding-right: 0.8em;
-    border-left: 5px solid #5d4d7a;
-    /* spacemacs inactive-gray */
-    margin-bottom: 2.5rem;
-    background-color: #212026;
-    /* darker spacemacs background */
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-left: 1em;
+  padding-top: 0.8em;
+  padding-bottom: 0.8em;
+  padding-right: 0.8em;
+  border-left: 5px solid #5d4d7a;
+  /* spacemacs inactive-gray */
+  margin-bottom: 2.5rem;
+  background-color: #212026;
+  /* darker spacemacs background */
 }
 
 blockquote p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 img,
 video {
-    height: auto;
-    max-width: 100%;
-    margin-top: 0px;
-    margin-bottom: 2.5rem;
+  height: auto;
+  max-width: 100%;
+  margin-top: 0px;
+  margin-bottom: 2.5rem;
 }
 
 #photo {
-    border-radius: 50%;
-    /* Restored from original */
-    margin-top: 1rem;
-    /* Restored from original */
-    display: block;
-    /* Restored from original */
-    margin-left: auto;
-    /* Restored from original */
-    margin-right: auto;
-    /* Restored from original */
-    max-width: 50%;
-    /* Restored from original */
-    filter: brightness(0.9) contrast(1.1);
+  /* border: 3px solid #7EC0EE; */
+  /* Commented out for now  */
+  border-radius: 50%;
+  /* Restored from original */
+  margin-top: 1rem;
+  /* Restored from original */
+  display: block;
+  /* Restored from original */
+  margin-left: auto;
+  /* Restored from original */
+  margin-right: auto;
+  /* Restored from original */
+  max-width: 50%;
+  /* Restored from original */
+  filter: brightness(0.9) contrast(1.1);
 }
 
 /* Pre and Code */
 pre {
-    background-color: #212026;
-    /* darker spacemacs background */
-    display: block;
-    padding: 1em;
-    overflow-x: auto;
-    margin-top: 0px;
-    margin-bottom: 2.5rem;
-    font-size: 0.9em;
-    color: #b2b2b2;
-    /* spacemacs-dark foreground */
+  background-color: #212026;
+  /* darker spacemacs background */
+  display: block;
+  padding: 1em;
+  overflow-x: auto;
+  margin-top: 0px;
+  margin-bottom: 2.5rem;
+  font-size: 0.9em;
+  color: #b2b2b2;
+  /* spacemacs-dark foreground */
 }
 
 code,
 kbd,
 samp {
-    font-family: "Source Code Pro", monospace;
-    font-size: 0.9em;
-    padding: 0 0.5em;
-    background-color: #212026;
-    /* darker spacemacs background */
-    color: #b2b2b2;
-    /* spacemacs-dark foreground */
-    white-space: pre-wrap;
+  font-family: "Source Code Pro", monospace;
+  font-size: 0.9em;
+  padding: 0 0.5em;
+  background-color: #212026;
+  /* darker spacemacs background */
+  color: #b2b2b2;
+  /* spacemacs-dark foreground */
+  white-space: pre-wrap;
 }
 
 pre>code {
-    padding: 0;
-    background-color: transparent;
-    white-space: pre;
-    font-size: 1em;
+  padding: 0;
+  background-color: transparent;
+  white-space: pre;
+  font-size: 1em;
 }
 
 /* Tables */
 table {
-    text-align: justify;
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 2rem;
+  text-align: justify;
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 2rem;
 }
 
 td,
 th {
-    padding: 0.5em;
-    border-bottom: 1px solid #5d4d7a;
-    /* spacemacs inactive-gray */
+  padding: 0.5em;
+  border-bottom: 1px solid #5d4d7a;
+  /* spacemacs inactive-gray */
 }
 
 /* Buttons, forms and input */
 input,
 textarea {
-    border: 1px solid #b2b2b2;
-    /* spacemacs-dark foreground */
+  border: 1px solid #b2b2b2;
+  /* spacemacs-dark foreground */
 }
 
 input:focus,
 textarea:focus {
-    border: 1px solid #7EC0EE;
-    /* SkyBlue2 - emacs-state-cursor */
+  border: 1px solid #7EC0EE;
+  /* SkyBlue2 - emacs-state-cursor */
 }
 
 textarea {
-    width: 100%;
+  width: 100%;
 }
 
 .button,
@@ -274,19 +248,19 @@ input[type=submit],
 input[type=reset],
 input[type=button],
 input[type=file]::file-selector-button {
-    padding: 5px 10px;
-    text-align: center;
-    text-decoration: none;
-    white-space: nowrap;
-    border-radius: 5px;
-    border: 1px solid #5d4d7a;
-    /* spacemacs inactive-gray */
-    background-color: #212026;
-    /* darker spacemacs background */
-    color: #b2b2b2;
-    /* spacemacs-dark foreground */
-    cursor: pointer;
-    box-sizing: border-box;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  white-space: nowrap;
+  border-radius: 5px;
+  border: 1px solid #7EC0EE;
+  /* SkyBlue2 - emacs-state-cursor */
+  color: #b2b2b2;
+  /* spacemacs-dark foreground */
+  background-color: #292b2e;
+  /* spacemacs-dark background */
+  cursor: pointer;
+  box-sizing: border-box;
 }
 
 .button[disabled],
@@ -295,8 +269,8 @@ input[type=submit][disabled],
 input[type=reset][disabled],
 input[type=button][disabled],
 input[type=file]::file-selector-button[disabled] {
-    cursor: default;
-    opacity: 0.5;
+  cursor: default;
+  opacity: 0.5;
 }
 
 .button:hover,
@@ -305,11 +279,11 @@ input[type=submit]:hover,
 input[type=reset]:hover,
 input[type=button]:hover,
 input[type=file]::file-selector-button:hover {
-    background-color: #7EC0EE;
-    /* SkyBlue2 - emacs-state-cursor */
-    color: #292b2e;
-    /* spacemacs-dark background */
-    outline: 0;
+  background-color: #5d4d7a;
+  /* spacemacs inactive-gray */
+  color: #c5c8c6;
+  /* Light heading color */
+  outline: 0;
 }
 
 .button:focus-visible,
@@ -318,116 +292,106 @@ input[type=submit]:focus-visible,
 input[type=reset]:focus-visible,
 input[type=button]:focus-visible,
 input[type=file]::file-selector-button:focus-visible {
-    outline-style: solid;
-    outline-width: 2px;
+  outline-style: solid;
+  outline-width: 2px;
 }
 
 textarea,
 select,
 input {
-    color: #b2b2b2;
-    /* spacemacs-dark foreground */
-    padding: 6px 10px;
-    /* The 6px vertically centers text on FF, ignored by Webkit */
-    margin-bottom: 10px;
-    background-color: #212026;
-    /* darker spacemacs background */
-    border: 1px solid #5d4d7a;
-    /* spacemacs inactive-gray */
-    border-radius: 4px;
-    box-shadow: none;
-    box-sizing: border-box;
+  color: #b2b2b2;
+  /* spacemacs-dark foreground */
+  padding: 6px 10px;
+  /* The 6px vertically centers text on FF, ignored by Webkit */
+  margin-bottom: 10px;
+  background-color: #212026;
+  /* darker spacemacs background */
+  border: 1px solid #5d4d7a;
+  /* spacemacs inactive-gray */
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box;
 }
 
 /* Navigation bar */
 .site-header {
-    margin-top: 1em;
-    margin-bottom: 2em;
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 .nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 nav a {
-    color: #7EC0EE;
-    /* SkyBlue2 */
+  color: #7EC0EE;
+  /* SkyBlue2 */
 }
 
 nav a:hover {
-    color: #EEAD0E;
-    /* DarkGoldenrod2 */
-    border-bottom: none;
+  color: #EEAD0E;
+  /* DarkGoldenrod2 */
+  border-bottom: none;
 }
 
-nav a.active {
-    color: #EEAD0E;
-    /* DarkGoldenrod2 */
-}
+/* Removed special styling for home link */
+/* nav a.home {
+  color: #EEAD0E;                
+} */
 
 nav li,
 #home-container {
-    display: inline-block;
-    margin: 0;
-    padding: 0.75rem;
+  display: inline-block;
+  margin: 0;
+  padding: 0.75rem;
 }
 
 /* Footer */
-footer {
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 70%;
-    /* Increased from 60% */
-}
 
-/* This ensures the footer's max-width scales with screen size */
-footer[style] {
-    max-width: 95% !important;
-    width: auto !important;
+footer {
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 75%;
 }
 
 footer,
 footer a,
 footer a:visited {
-    color: #5d4d7a;
-    /* spacemacs inactive-gray */
+  color: #5d4d7a;
+  /* spacemacs inactive-gray */
 }
 
 footer a:hover {
-    color: #66CD00;
-    /* chartreuse3 */
-    border-bottom: 1px solid #66CD00;
+  color: #66CD00;
+  /* chartreuse3 */
+  border-bottom: 1px solid #66CD00;
 }
 
 @media (max-width: 382px) {
-    footer {
-        font-size: 1.5vw;
-    }
-
-    footer[style] {
-        max-width: 95% !important;
-    }
+  footer {
+    font-size: 1.5vw;
+  }
 }
 
 /* PGP section */
 #pgp div {
-    background-color: #212026 !important;
-    /* darker spacemacs background */
-    border-color: #5d4d7a !important;
-    /* spacemacs inactive-gray */
-    font-family: "Source Code Pro", monospace !important;
+  background-color: #212026 !important;
+  /* darker spacemacs background */
+  border-color: #5d4d7a !important;
+  /* spacemacs inactive-gray */
+  font-family: "Source Code Pro", monospace !important;
 }
 
 #pgp pre {
-    color: #b2b2b2;
-    /* spacemacs-dark foreground */
+  color: #b2b2b2;
+  /* spacemacs-dark foreground */
 }
